--- a/lesson07 2/Child Page.html
+++ b/lesson07 2/Child Page.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Event&nbsp;</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="test.html">Event&nbsp;</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#">Brand&nbsp;</a> </li>
           <li class="nav-item"><a href="#" class="nav-link">Research&nbsp;</a></li>
         </ul>
@@ -94,7 +94,7 @@
             </div>
             <div>
               <div class="text-body">
-                <div class="text-body">"Take the phone of the hook you can disappear for a while/ It's alright, you can afford to lose a doy or two".</div>
+                <div class="text-body">"Take the phone of the hook you can disappear for a while/ It's alright, you can afford to lose a day or two".</div>
                 <div class="text-body">	      "Vienna" -BIlly Joel&nbsp;</div>
               </div>
 </div>
@@ -140,7 +140,12 @@
       <h2>More About Me&nbsp;</h2>
       <div class="row">
         <div class="col-lg-12">
-          <p>&nbsp;Lorem Ipsum&nbsp;</p>
+          <p>&nbsp;</p>
+          <div class="col-lg-12">
+            <p>&nbsp;As a mass communications student, I have decided to work at SIUE's newspaper, The Alestle, for more experience within the field I hope to go into. To check out some of my work go <a href="https://www.alestlelive.com/search/?l=25&sort=relevance&f=html&t=article%2Cvideo%2Cyoutube%2Ccollection&app=editorial&nsa=eedition&q=Chloe+Wolfe" target="_blank">here</a>.&nbsp; Below are some of my pictures that I've taken for competitions and just regular print. If you have a story idea or would like to contact me, email me <a href="mailto:cwolfe@alestlelive.com">here</a> &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.alestlelive.com/search/?l=25&sort=relevance&f=html&t=article%2Cvideo%2Cyoutube%2Ccollection&app=editorial&nsa=eedition&q=Chloe+Wolfe"> &nbsp;</a>&nbsp;<a href="1555467">&nbsp;</a>&nbsp;</p>
+            <p>For more info on me, check out my page <a href="test.html" target="_self">here</a>.</p>
+<img src="images/Moment_02_CMW.jpg" alt="Essential- Starting at UPS two years ago, Bobby Lane spends his days delivering packages across Chicago, Illinois." width="22%" height="auto" class="img-fluid"/>          <a href="https://www.alestlelive.com/news/article_0f2e974a-a696-11ed-8d8e-73d882ed82a9.html" target="_blank"><img src="images/Photo 4 about me.jpg" width="52%" height="auto" alt="" class="img-fluid"></a> <img src="images/TRANS AWARNESS .jpg" alt="Mariah Mack, a student studying for their masters in biology, holds the transgender pride flag temporary tattoo to their arm. Mack discussed the importance of having a place on campus where people who are gender non-conforming are able to feel safe." width="22%" height="auto" class="img-fluid"/>          </div>
+          <p>&nbsp;</p>
         </div>
 </div>
     </div>
