--- a/lesson07 2/test.html
+++ b/lesson07 2/test.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="/Templates/Template 01.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MC327 PLACEHOLDER</title>
-	  <meta name="description" content="THIS IS MY PLACEHOLDER FOR THE DESCRIPTION">
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Bootstrap eCommerce Page Template</title>
+	  <meta name="description" content="Insert Something here">
+    <!-- InstanceEndEditable -->
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
     <link href="favorite-styles.css" rel="stylesheet" type="text/css">
+	  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.--><script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/source-sans-pro:n2,n7,n4:default.js" type="text/javascript"></script>
+  <!-- InstanceBeginEditable name="head" -->
+  <!-- InstanceEndEditable -->
 </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -18,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#">Event&nbsp;</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="test.html">Event&nbsp;</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#">Brand&nbsp;</a> </li>
           <li class="nav-item"><a href="#" class="nav-link">Research&nbsp;</a></li>
         </ul>
@@ -28,7 +35,68 @@
   <header class="row">
     <div class="col-xl-12">
       <h2>Chloe Wolfe&nbsp;</h2>
-      <p>Mass Communications Student&nbsp; &nbsp;</p>
+      <p>Mass Communications Student&nbsp;</p>
     </div>
   </header>
-  
+  <!-- InstanceBeginEditable name="MainTemplate" -->
+  <div class="wrapper">
+    <div class="container mt-3">
+<hr>
+    </div>
+<div class="container">
+    <h2>Hello:)&nbsp;</h2>
+</div>
+<div class="container"> </div>
+  </div>
+  <!-- InstanceEndEditable -->
+<div class="container text-white bg-dark p-4">
+  <div class="row">
+        <div class="col-6 col-md-8 col-lg-12">
+          <div class="row text-center">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-12">
+              <ul class="list-unstyled">
+                <li class="btn-link"> <a>Link anchor</a> </li>
+              </ul>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-4 col-12">
+              <ul class="list-unstyled">
+                <li class="btn-link"> <a>Link anchor</a> </li>
+              </ul>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-4 col-12">
+              <ul class="list-unstyled">
+                <li class="btn-link"> <a>Link anchor</a> </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-12 col-12 row">
+          <address class="col-lg-6">
+            <strong>Chloe Wolfe&nbsp;</strong>
+            
+            
+            <abbr title="Phone">&nbsp;</abbr> 
+          </address>
+          <address class="col-lg-6">
+            <strong>About Us&nbsp;</strong><br>
+            <a href="mailto:#">chwolfe@siue.edu&nbsp;</a>
+          </address>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p>© 2023 Chloe Wolfe</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap-4.4.1.js"></script>
+</body>
+<!-- InstanceEnd --></html>
