--- a/lesson07 2/index.html
+++ b/lesson07 2/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- InstanceBeginEditable name="doctitle" -->
-    <title>assignment 2 and 3</title>
-	  <meta name="description" content="2 of my design assignments">
+    <title>Bootstrap eCommerce Page Template</title>
+	  <meta name="description" content="Insert Something here">
     <!-- InstanceEndEditable -->
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -50,7 +50,7 @@
               <li data-target="#carouselExampleControls" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="w-100" src="actual placeholder.jpg" alt="my friend hammocking in a tree ">
+              <div class="carousel-item active"> <img class="d-block w-100" src="images/1920x500.gif" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Item 1 Heading</h5>
                   <p>Item 1 Description</p>
@@ -59,7 +59,7 @@
               <div class="carousel-item"> <img class="d-block w-100" src="images/1920x500.gif" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Item 2 Heading</h5>
-                  <p>Item 2 Descrition</p>
+                  <p>Item 2 Description</p>
                 </div>
               </div>
               <div class="carousel-item"> <img class="d-block w-100" src="images/1920x500.gif" alt="Third slide">
@@ -75,91 +75,10 @@
       <hr>
     </div>
     <div class="container">
-      <h2 class="text-center">&nbsp;</h2>
-		
-	  <div>
-		<div class="h2 col-xl-12">My Lists&nbsp; 
-		  <div class="col-2"></div>
-		</div>
-  <table width="95%" border="1" class="p">
-		  <tbody>
-		    <tr>
-		      <td>&nbsp;My Favorite Things</td>
-		      <td>&nbsp;Things I've Done Recently&nbsp;</td>
-	        </tr>
-		    <tr>
-		      <td class="p">&nbsp;1.&nbsp; Hozier</td>
-		      <td>&nbsp;Ate dinner</td>
-	        </tr>
-		    <tr>
-		      <td>&nbsp;2. Hammocking</td>
-		      <td>&nbsp;Wrote an essay</td>
-	        </tr>
-		    <tr>
-		      <td>&nbsp;3. Fleetwood Mac&nbsp; &nbsp;</td>
-		      <td>&nbsp;Worked</td>
-	        </tr>
-		    <tr>
-		      <td>&nbsp;4.&nbsp; My bed</td>
-		      <td>&nbsp;Read my book&nbsp;</td>
-	        </tr>
-		    <tr>
-		      <td>&nbsp;5.&nbsp; Consumption&nbsp;</td>
-		      <td>&nbsp;Folded laundry</td>
-	        </tr>
-	      </tbody>
-  </table>
-  <tbody>
-  <tr>
-		<div class="col-lg-4"></div>
-	  <div class="row">
-        <div class="col-4">
-          <div class="row">
-            <div class="col-lg-6 col-10 ml-1">
-              <h4 class="h2">&nbsp;Texts</h4>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-xl-6"> </div>
-            <p class="text-body">"If we're lucky. If we're very lucky the universe will send us the people we need to survive"</p>
-            <div>
-              <div class="text-body">
-                <p class="text-body author"> Aristotle and Dante Dive into the Waters of the World - Benjamin Alire Saenz</p>
+      <h2 class="text-center">Welcome!&nbsp;</h2>
+      <p>This is a temporary index page so I can test the server&nbsp;</p>
 </div>
-            </div>
-            <div>
-              <div class="text-body">
-                <p class="text-body">"Take the phone of the hook you can disappear for a while/ It's alright, you can afford to lose a day or two".</p>
-                <div class="text-body">	      
-                  <blockquote>
-                    <p class="text-body author">"Vienna" -BIlly Joel&nbsp;</p>
-                  </blockquote>
-                </div>
-              </div>
-</div>
-            <div class="text-body"> </div>
-          </div>
-        </div>
-        <div class="col-4"> </div>
-</div>
-    </div>
-    <div class="container">
-      <h2>More About Me&nbsp;</h2>
-      <div class="row">
-        <div class="col-lg-12">
-          <p>&nbsp;</p>
-          <div class="col-lg-12">
-            <p>&nbsp;As a mass communications student, I have decided to work at SIUE's newspaper, The Alestle, for more experience within the field I hope to go into. To check out some of my work go <a href="https://www.alestlelive.com/search/?l=25&sort=relevance&f=html&t=article%2Cvideo%2Cyoutube%2Ccollection&app=editorial&nsa=eedition&q=Chloe+Wolfe" target="_blank">here</a>.&nbsp; Below are some of my pictures that I've taken for competitions and just regular print. If you have a story idea or would like to contact me, email me <a href="mailto:cwolfe@alestlelive.com">here</a> &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.alestlelive.com/search/?l=25&sort=relevance&f=html&t=article%2Cvideo%2Cyoutube%2Ccollection&app=editorial&nsa=eedition&q=Chloe+Wolfe"> &nbsp;</a>&nbsp;<a href="1555467">&nbsp;</a>&nbsp;</p>
-            <p>For more info on me, check out my page <a href="test.html" target="_self">here</a>.</p>
-<img src="images/Moment_02_CMW.jpg" alt="Essential- Starting at UPS two years ago, Bobby Lane spends his days delivering packages across Chicago, Illinois." width="22%" height="auto" class="img-fluid"/>          <a href="https://www.alestlelive.com/news/article_0f2e974a-a696-11ed-8d8e-73d882ed82a9.html" target="_blank"><img src="images/Photo 4 about me.jpg" width="52%" height="auto" alt="" class="img-fluid"></a> <img src="images/TRANS AWARNESS .jpg" alt="Mariah Mack, a student studying for their masters in biology, holds the transgender pride flag temporary tattoo to their arm. Mack discussed the importance of having a place on campus where people who are gender non-conforming are able to feel safe." width="22%" height="auto" class="img-fluid"/>          </div>
-          <p>&nbsp;</p>
-        </div>
-</div>
-    </div>
-    <div class="container">
-      <h2 class="text-center">&nbsp;</h2>
-</div>
-    <div class="container"> </div>
+<div class="container"> </div>
   </div>
   <!-- InstanceEndEditable -->
 <div class="container text-white bg-dark p-4">
