--- a/lesson07 2/Favorite Brand.html
+++ b/lesson07 2/Favorite Brand.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="Macintosh HD:Users:chloewolfe:Downloads:lesson07 2:Templates:Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Bootstrap eCommerce Page Template</title>
-	  <meta name="Index or homepage" content="Intro" page >
+	  <meta name="Favorite Brand" content="Cool brand I found">
     <!-- InstanceEndEditable -->
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -40,39 +40,23 @@
   </header>
   <!-- InstanceBeginEditable name="MainTemplate" -->
   <div class="wrapper">
-    <div class="container mt-3">
-<hr>
-    </div>
-    <div class="container">
-      <h2 class="text-center">Hello!&nbsp;</h2>
-      <p>This is a website featuring my work in Mass Communication 327. It features some of the papers I wrote as a part of the class as well as design options made by myself. For more about me, go <a href="Internal link page.html">here</a>!&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
-    </div>
+    
 <div class="container">
-    <h2>More About   My Work&nbsp;</h2>
-      <p>As a mass communications student, I have decided to work at SIUE's newspaper, The Alestle, for more experience within the field I hope to go into. To check out some of my work go <a href="https://www.alestlelive.com/search/?l=25&sort=relevance&f=html&t=article,video,youtube,collection&app=editorial&nsa=eedition&q=chloe+Wolfe">here</a>. Below are some of my pictures that I've taken for competitions and just regular print. If you have a story idea or would like to contact me, email me <a href=".mailto-cwolfe@alestlelive.com">.</a>
-        <h4>My Favorite Work&nbsp;</h4>
-      </p>
-    <ul>
-      <li>Public scholar Angel Jones uses social media to provide access to education</li>
-      <li>Assistant professor's award-winning documentary comes to SIUE</li>
-      <li>Sexism in the medical field is as old as healthcare itself</li>
-    </ul>
-    <h4>My Most Read Work&nbsp;</h4>
-      <ol>
-        <ol>
-          <li>Union negotiations remain unsuccessful, all of campus may face consequences
-</li>
-          <li>Illinois remains a safe haven for transgender people as surrounding states turn hostile</li>
-          <li>Sugo's is perfect for broke college students </li>
-          <h4 class="text-left">&nbsp;</h4>
-        </ol>
-    </ol>
-      <p><img src="images/TRANS AWARNESS .jpg" alt="Mariah Mack, a student studying for their masters in biology, holds the transgender pride flag temporary tattoo to their arm. Mack discussed the importance of having a place on campus where people who are gender non-conforming are able to feel safe." width="273" height="2048" class="img-fluid" title="Mariah Mack"/><a href="https://www.alestlelive.com/news/article_0f2e974a-a696-11ed-8d8e-73d882ed82a9.html"><img src="images/Photo 4 about me.jpg" alt="Candace Hall debuted her documentary about the importance of having a community within academia at SIUE February 2." width="512" height="1365" class="img-fluid" title="ClusterLuck "/></a><img src="images/Moment_02_CMW.jpg" alt="" width="300" height="2048" class="img-fluid"/></p>
-    </div>
-    <div class="container">
-      <h2 class="text-center">&nbsp;</h2>
+  <h2>My Favorite Brand&nbsp;&nbsp;</h2>
+    <p class="text-left">&nbsp;<strong class="text-left">3:AM Magazine</strong></p>
+<div class="row">
+      <div class="col-lg-12">
+        <p>As a mass communications student, I enjoy reading many different types of media. One of my favorite ways to consume media is by reading, online or in print. I especially enjoy 3:AM Magazine, which has options from blog posts to poetry pieces. 3:AM is an electronic magazine that has been around since 2000 and allows writers to send in their pieces to the editors who choose what will appear on the website. Like a newspaper, the magazine features different sections including; reviews, essays, interviews, fiction, poetry, and blogs.</p>
+        <p>&nbsp;The website design is what makes it stand out though. The banner print is in a typewriter-style print which works well with the 70s-style block art in the background. The header also looks vintage, as if they have kept the same one since when they first began. The rest of the font is a blocky print that looks like it would be printed in a modern newspaper. Along with the banner, there are several options to click on so it is easier to find what you are looking for. There are also buttons to submit stories or individually search one up. Scrolling down reveals featured pieces placed on shadowed rectangles with pictures at the top of them. The featured pieces are arranged by type and have a brief summary as well as the author’s name. This website does a great job of looking aesthetic while also being functional.</p>
+        <p>&nbsp;I appreciate how the banner pulls you in, and then everything else is white allowing the featured articles to stand out. I plan to use similar colors and possibly similar fonts. For the font, in the header, I would use a typewriter-style that will stand out with the colors and the overall aesthetic. I found one called Rational TW that I like. I know it's boring, but for the rest of the text, I think Times New Roman would look good. It’s easily recognizable but it's still a good font. For the background color where featured stories are placed, I would use a slightly more off-white color as opposed to the eggshell white that does not necessarily match the banner at the top. The colors I would use for my header would be dusty burgundy (#A43E3C), light navy blue (#204972), and mustard yellow (#204972). I hope to make it look slightly vintage as the colors all together look good when slightly faded.&nbsp; </p>
+<p>
 </div>
-    <div class="container"> </div>
+  </div>
+  <div class="container">
+      <h2 class="text-center">&nbsp;</h2>
+    <h2 class="text-center">WORKS FEATURED&nbsp; &nbsp;&nbsp;</h2>
+</div>
+    <div class="container"><img src="images/IMG_7024.jpg" alt="Image of an entry on 3 A.M. Magazine." width="250" height="348" class="img-fluid" title="Always Crashing the Same Car"/><img src="images/A7963AD0-03FF-4313-AF76-675986E63E8A.jpg" alt="Biography offered on 3 A.M. Magazine" width="250" height="348" class="img-fluid" title="Harry Crews"/><img src="images/C90CBD9B-469F-465B-9F46-AC4762F44FF6-2.jpg" alt="" width="250" height="348" class="img-fluid"/>&nbsp; &nbsp;&nbsp; </div>
   </div>
   <!-- InstanceEndEditable -->
 <div class="container text-white bg-dark p-4">
