--- a/lesson07 2/Internal link page.html
+++ b/lesson07 2/Internal link page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Bootstrap eCommerce Page Template</title>
-	  <meta name="Index or homepage" content="Intro" page >
+	  <meta name="description" content="Insert Something here">
     <!-- InstanceEndEditable -->
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -25,9 +25,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> </li>
-          <li class="nav-item"> <a class="nav-link" href="Past%20Event.html">Event&nbsp;</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="Favorite%20Brand.html">Brand&nbsp;</a> </li>
-          <li class="nav-item"><a href="Research%20Paper.html" class="nav-link">Research&nbsp;</a></li>
+          <li class="nav-item"> <a class="nav-link" href="Past Event.html">Event&nbsp;</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="Favorite Brand.html">Brand&nbsp;</a> </li>
+          <li class="nav-item"><a href="Research Paper.html" class="nav-link">Research&nbsp;</a></li>
         </ul>
       </div>
     </div>
@@ -41,36 +41,39 @@
   <!-- InstanceBeginEditable name="MainTemplate" -->
   <div class="wrapper">
     <div class="container mt-3">
-<hr>
+      <div class="row">
+        <div class="col-12">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleControls" data-slide-to="1"></li>
+              <li data-target="#carouselExampleControls" data-slide-to="2"></li>
+            </ol>
+<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> </div>
+        </div>
+      </div>
+      <hr>
     </div>
     <div class="container">
-      <h2 class="text-center">Hello!&nbsp;</h2>
-      <p>This is a website featuring my work in Mass Communication 327. It features some of the papers I wrote as a part of the class as well as design options made by myself. For more about me, go <a href="Internal link page.html">here</a>!&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+<table width="80%" border="5" class="h3">
+      <tbody>
+          <tr>
+            <th width="50%" scope="col">&nbsp;Important Dates</th>
+            <th width="50%" scope="col">&nbsp;</th>
+          </tr>
+          <tr>
+            <td class="p">&nbsp;December 12th</td>
+            <td class="p">&nbsp;My birthday</td>
+          </tr>
+          <tr>
+            <td class="p">&nbsp;June 16th&nbsp; &nbsp;</td>
+            <td class="p">&nbsp;Openingnight of "12 Angry Jurors"</td>
+          </tr>
+      </tbody>
+      </table>
     </div>
 <div class="container">
-    <h2>More About   My Work&nbsp;</h2>
-      <p>As a mass communications student, I have decided to work at SIUE's newspaper, The Alestle, for more experience within the field I hope to go into. To check out some of my work go <a href="https://www.alestlelive.com/search/?l=25&sort=relevance&f=html&t=article,video,youtube,collection&app=editorial&nsa=eedition&q=chloe+Wolfe">here</a>. Below are some of my pictures that I've taken for competitions and just regular print. If you have a story idea or would like to contact me, email me <a href=".mailto-cwolfe@alestlelive.com">.</a>
-        <h4>My Favorite Work&nbsp;</h4>
-      </p>
-    <ul>
-      <li>Public scholar Angel Jones uses social media to provide access to education</li>
-      <li>Assistant professor's award-winning documentary comes to SIUE</li>
-      <li>Sexism in the medical field is as old as healthcare itself</li>
-    </ul>
-    <h4>My Most Read Work&nbsp;</h4>
-      <ol>
-        <ol>
-          <li>Union negotiations remain unsuccessful, all of campus may face consequences
-</li>
-          <li>Illinois remains a safe haven for transgender people as surrounding states turn hostile</li>
-          <li>Sugo's is perfect for broke college students </li>
-          <h4 class="text-left">&nbsp;</h4>
-        </ol>
-    </ol>
-      <p><img src="images/TRANS AWARNESS .jpg" alt="Mariah Mack, a student studying for their masters in biology, holds the transgender pride flag temporary tattoo to their arm. Mack discussed the importance of having a place on campus where people who are gender non-conforming are able to feel safe." width="273" height="2048" class="img-fluid" title="Mariah Mack"/><a href="https://www.alestlelive.com/news/article_0f2e974a-a696-11ed-8d8e-73d882ed82a9.html"><img src="images/Photo 4 about me.jpg" alt="Candace Hall debuted her documentary about the importance of having a community within academia at SIUE February 2." width="512" height="1365" class="img-fluid" title="ClusterLuck "/></a><img src="images/Moment_02_CMW.jpg" alt="" width="300" height="2048" class="img-fluid"/></p>
-    </div>
-    <div class="container">
-      <h2 class="text-center">&nbsp;</h2>
+    <h2>&nbsp;</h2>
 </div>
     <div class="container"> </div>
   </div>
@@ -104,7 +107,7 @@
             <abbr title="Phone">&nbsp;</abbr> 
           </address>
           <address class="col-lg-6">
-            <strong>Message Me&nbsp;</strong><br>
+            <strong>About Us&nbsp;</strong><br>
             <a href="mailto:#chwolfe@siue.edu">chwolfe@siue.edu&nbsp;</a>
           </address>
         </div>
