--- a/lesson07 2/Past Event.html
+++ b/lesson07 2/Past Event.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"><!-- InstanceBegin template="Macintosh HD:Users:chloewolfe:Downloads:lesson07 2:Templates:Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- InstanceBeginEditable name="doctitle" -->
     <title>Bootstrap eCommerce Page Template</title>
-	  <meta name="Index or homepage" content="Intro" page >
+	  <meta name="Past Event" content="Me in europe fr">
     <!-- InstanceEndEditable -->
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -43,36 +43,40 @@
     <div class="container mt-3">
 <hr>
     </div>
-    <div class="container">
-      <h2 class="text-center">Hello!&nbsp;</h2>
-      <p>This is a website featuring my work in Mass Communication 327. It features some of the papers I wrote as a part of the class as well as design options made by myself. For more about me, go <a href="Internal link page.html">here</a>!&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
-    </div>
 <div class="container">
-    <h2>More About   My Work&nbsp;</h2>
-      <p>As a mass communications student, I have decided to work at SIUE's newspaper, The Alestle, for more experience within the field I hope to go into. To check out some of my work go <a href="https://www.alestlelive.com/search/?l=25&sort=relevance&f=html&t=article,video,youtube,collection&app=editorial&nsa=eedition&q=chloe+Wolfe">here</a>. Below are some of my pictures that I've taken for competitions and just regular print. If you have a story idea or would like to contact me, email me <a href=".mailto-cwolfe@alestlelive.com">.</a>
-        <h4>My Favorite Work&nbsp;</h4>
-      </p>
-    <ul>
-      <li>Public scholar Angel Jones uses social media to provide access to education</li>
-      <li>Assistant professor's award-winning documentary comes to SIUE</li>
-      <li>Sexism in the medical field is as old as healthcare itself</li>
-    </ul>
-    <h4>My Most Read Work&nbsp;</h4>
-      <ol>
-        <ol>
-          <li>Union negotiations remain unsuccessful, all of campus may face consequences
-</li>
-          <li>Illinois remains a safe haven for transgender people as surrounding states turn hostile</li>
-          <li>Sugo's is perfect for broke college students </li>
-          <h4 class="text-left">&nbsp;</h4>
-        </ol>
-    </ol>
-      <p><img src="images/TRANS AWARNESS .jpg" alt="Mariah Mack, a student studying for their masters in biology, holds the transgender pride flag temporary tattoo to their arm. Mack discussed the importance of having a place on campus where people who are gender non-conforming are able to feel safe." width="273" height="2048" class="img-fluid" title="Mariah Mack"/><a href="https://www.alestlelive.com/news/article_0f2e974a-a696-11ed-8d8e-73d882ed82a9.html"><img src="images/Photo 4 about me.jpg" alt="Candace Hall debuted her documentary about the importance of having a community within academia at SIUE February 2." width="512" height="1365" class="img-fluid" title="ClusterLuck "/></a><img src="images/Moment_02_CMW.jpg" alt="" width="300" height="2048" class="img-fluid"/></p>
+    <h2>Past Event&nbsp;</h2>
+    <h2>My Trip to the British Isles&nbsp;</h2>
+      <div class="row">
+        <div class="col-lg-12">
+          <p> Last summer I had the opportunity to travel to the British Isles on a school trip, it was one of the most stressful yet exciting trips I will probably ever go on. The thing that changed me forever though was the transportation we took throughout the trip. All of them were stressful and most of the time uncomfortable.&nbsp;</p>
+          <p>Originally the trip was meant to happen in 2020, but for obvious reasons, it was canceled. After waiting two years to go on the trip, I was excited. The trip started out rough though. Our original plan was to take the Amtrak up to Chicago and be on our flight with a few hours to spare, but our train was five hours late. Then when we finally got to Chicago, we had less than an hour to find our terminal and get checked in. We ran through O’Hare with just a little bit of time to spare. Our first flight was to the Netherlands where we would hop on a connecting flight to Dublin, Ireland. The first flight was eight hours, and I got little to no sleep. I was in between two men who had no sense of personal space, one had his socks off the entire time and the other slept on top of me. To say it was a rough flight was an understatement. At the end of the flight, I had had less than three hours of sleep within the last 24. As soon as the flight landed, we had to run to our connecting flight. After getting on the next plane, I took the best nap of my life.</p>
+<p>In London, we took the double-decker buses and the underground, which were disgusting but convenient. We had day passes, and every day my ticket stopped working after the first scan, so I had to have someone else use their ticket and quickly pass with them.&nbsp;</p>
+          <p>At the end of our trip, we went to Heathrow-London airport, to get on an airplane home. Originally we were supposed to have a connecting flight in New York but less than 24 hours before the flight, it was canceled. We frantically had to find a new flight, which now connected to Atlanta, Georgia. The London airport was the worst airport I have ever been to and I would be glad to never return. The flight from Georgia to Chicago was not bad, but I was happy to finally be somewhat near home. I am so grateful I was able to take that trip, but if I had the chance, I would for sure change the way we traveled. </p>
+        </div>
+      </div>
     </div>
-    <div class="container">
-      <h2 class="text-center">&nbsp;</h2>
-</div>
     <div class="container"> </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <ul class="list-unstyled">
+            <li class="media"><img src="images/IMG_6568 (1)-2.jpg" alt="Picture of me and my friends on the bus taking a really uncomfortable nap." width="300" height="400" class="img-fluid" title="Nap on the bus"/></li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+          <ul class="list-unstyled">
+            <li class="media">
+<div class="media-body">
+              <h5 class="mt-0 mb-1">Quotes from the trip&nbsp;</h5>
+                <p> "'Bread and meat, lets just throw it together' and they ruined it for me." -my friend Brooke&nbsp;</p>
+                <p>"I miss spices, all I want is chili powder."-my friend Dylan </p>
+</div>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-4"><img src="images/IMG_5096-2.jpg" alt="Picture of St Pancras underground station in London, England." width="300" height="400" class="img-fluid" title="Underground Tube"/> </div>
+      </div>
+    </div>
   </div>
   <!-- InstanceEndEditable -->
 <div class="container text-white bg-dark p-4">
